--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,28 @@
 results:
   -
-    provision_time: 1m 6s
+    provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+
+
+      # Summary
+      - planned: 6
+      - pass: 6
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-10-5
+    PS_UUID: f2ddbc80-c835-11e8-a6d3-058298f88bb3
+  - provision_time: 1m 6s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
