--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,30 @@
 results:
   -
-    provision_time: 1m 8s
+    provision_time: 1m 6s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+
+
+      # Summary
+      - planned: 8
+      - pass: 8
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-10-8
+    PS_UUID: 51ef48a0-caf3-11e8-83e5-69e120b88bca
+  - provision_time: 1m 8s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
