--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,34 @@
 results:
   -
-    provision_time: 1m 5s
+    provision_time: 1m 8s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✖ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 8
+      - fail: 1
+
+      # Fails
+      ## Push a mono-container to the application
+          ✖ Push a mono-container to the application
+          undefined
+    author: null
+    timestamp: 2018-10-8
+    PS_UUID: fd92d900-cb03-11e8-88a0-039557cbd5b3
+  - provision_time: 1m 5s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
