--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,32 @@
 results:
   -
-    provision_time: 1m 31s
+    provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✔ Add a device environment variable
+
+
+      # Summary
+      - planned: 10
+      - pass: 10
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-10-8
+    PS_UUID: 9238dc90-cb12-11e8-a79b-1183ec164257
+  - provision_time: 1m 31s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
