--- a/results.yaml
+++ b/results.yaml
@@ -23,6 +23,31 @@ results:
 
       # Fails
     author: null
+    timestamp: 2018-10-9
+    PS_UUID: 0523e840-cb58-11e8-92d7-0f602f65783a
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 9
+      - fail: 0
+
+      # Fails
+    author: null
     timestamp: 2018-10-8
     PS_UUID: 8ca79d10-cb4f-11e8-8b3c-f9cb6675978c
   - provision_time: 1m 7s
