--- a/results.yaml
+++ b/results.yaml
@@ -24,6 +24,31 @@ results:
       # Fails
     author: null
     timestamp: 2018-10-9
+    PS_UUID: f77a0010-cb9a-11e8-9de2-b10a777a4bce
+  - provision_time: 1m 5s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 9
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-10-9
     PS_UUID: 73ac8530-cb92-11e8-a6ec-f9ed22d83950
   - provision_time: 1m 7s
     image_size: 1724 Mb
