--- a/results.yaml
+++ b/results.yaml
@@ -24,6 +24,31 @@ results:
       # Fails
     author: null
     timestamp: 2018-10-9
+    PS_UUID: 232c2e90-cbb4-11e8-b6f1-39c84bc88cbd
+  - provision_time: 1m 6s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 9
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-10-9
     PS_UUID: ad9fb050-cbab-11e8-8a1e-a36232831ec8
   - provision_time: 1m 6s
     image_size: 1724 Mb
