--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,37 @@
 results:
   -
-    provision_time: 1m 6s
+    provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✖ Reload supervisor on a running device
+       - ✖ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 7
+      - fail: 2
+
+      # Fails
+      ## Reload supervisor on a running device
+          ✖ Reload supervisor on a running device
+          undefined
+      ## Update device status with resin-device-progress
+          ✖ Update device status with resin-device-progress
+          undefined
+    author: null
+    timestamp: 2018-10-9
+    PS_UUID: ec1f47c0-cbcc-11e8-a98b-05c8392f0cda
+  - provision_time: 1m 6s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
