--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,35 @@
 results:
   -
-    provision_time: 1m 6s
+    provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✖ Sync application container
+
+
+      # Summary
+      - planned: 10
+      - pass: 9
+      - fail: 1
+
+      # Fails
+      ## Sync application container
+          ✖ Sync application container
+          undefined
+    author: null
+    timestamp: '2018-10-10'
+    PS_UUID: 59965490-cc7e-11e8-9297-b1824a3bd4b5
+  - provision_time: 1m 6s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
