--- a/results.yaml
+++ b/results.yaml
@@ -24,6 +24,31 @@ results:
       # Fails
     author: null
     timestamp: '2018-10-10'
+    PS_UUID: d44a0540-cc9e-11e8-815c-eb59da90677c
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 9
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: '2018-10-10'
     PS_UUID: 76ca99f0-cc96-11e8-a28d-59e0e89a9cdb
   - provision_time: 1m 6s
     image_size: 1724 Mb
