--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 7s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-11'
+    PS_UUID: becccbb0-ccf0-11e8-952b-df75da4a6050
+  - provision_time: 1m 7s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
