--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 2s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-11'
+    PS_UUID: 501b4df0-cd4e-11e8-b528-53a811f61319
+  - provision_time: 1m 2s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
