--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-10-11'
+    PS_UUID: 7bd99e50-cd4f-11e8-86ea-ad816fb2873e
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-11'
     PS_UUID: 5bfd5680-cd4f-11e8-9754-05050463c288
   - provision_time: 1m 32s
     image_size: 1724 Mb
