--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 8s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-11'
+    PS_UUID: 3c245b50-cd55-11e8-bf2a-ed840b8c94be
+  - provision_time: 1m 8s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
