--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 0m 35s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-11'
+    PS_UUID: 38954ee0-cd5a-11e8-b791-8588098a541b
+  - provision_time: 0m 35s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
