--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-10-11'
+    PS_UUID: 4dbfb440-cd5a-11e8-9200-33f7a3154828
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-11'
     PS_UUID: 38954ee0-cd5a-11e8-b791-8588098a541b
   - provision_time: 0m 35s
     image_size: 1724 Mb
