--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 8s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-11'
+    PS_UUID: b6ef9f90-cd5d-11e8-aa03-19377cf1d2d2
+  - provision_time: 1m 8s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
