--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,31 @@
 results:
   -
+    provision_time: 1m 8s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
     body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 9
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: '2018-10-11'
+    PS_UUID: ce53c0f0-cd60-11e8-b0d2-6f31fdb6f43f
+  - body: |-
       # Tests 
 
 
